[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 307.0
margin_top = 51.0
margin_right = 480.0
margin_bottom = 111.0
text = "aperte esse primeiro"

[node name="Button2" type="Button" parent="."]
margin_left = 496.0
margin_top = 47.0
margin_right = 675.0
margin_bottom = 112.0
text = "aperte esse segundo"

[node name="Button3" type="Button" parent="."]
margin_left = 712.0
margin_top = 49.0
margin_right = 917.0
margin_bottom = 115.0
text = "aperte esse terceiro"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 35.0
margin_top = 85.0
margin_right = 284.0
margin_bottom = 139.0
text = "insira a posição da pessoa"
align = 1

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 35.0
margin_top = 21.0
margin_right = 284.0
margin_bottom = 75.0
text = "insira o nome da pessoa"
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 60.0
margin_top = 208.0
margin_right = 259.0
margin_bottom = 333.0

[node name="Label2" type="Label" parent="."]
margin_left = 656.0
margin_top = 195.0
margin_right = 855.0
margin_bottom = 320.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
